--- a/demo.ipynb
+++ b/demo.ipynb
@@ -122,7 +122,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "audio_file = genai.upload_file(path='elonmusk_interview.wav')"
+    "from IPython.display import Audio\n",
+    "\n",
+    "audio_filename= 'elonmusk_interview.wav'\n",
+    "Audio(audio_filename, autoplay=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Audio Upload"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audio_file = genai.upload_file(path=audio_filename)"
    ]
   },
   {
@@ -165,6 +184,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Audio (Inline)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydub import AudioSegment\n",
+    "\n",
+    "sound = AudioSegment.from_wav(audio_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt =  \"Please transcribe this recording:\"\n",
+    "response = model.generate_content([\n",
+    "    prompt,\n",
+    "    {\n",
+    "        \"mime_type\": \"audio/wave\",\n",
+    "        \"data\": sound[:10_000].export().read() # 10 seconds\n",
+    "    }\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Video"
    ]
   },
@@ -183,10 +245,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "video_file_name = \"BigBuckBunny_320x180.mp4\"\n",
+    "video_filename = \"BigBuckBunny_320x180.mp4\"\n",
     "\n",
     "print(f\"Uploading file...\")\n",
-    "video_file = genai.upload_file(path=video_file_name)\n",
+    "video_file = genai.upload_file(path=video_filename)\n",
     "print(f\"Completed upload: {video_file.uri}\")"
    ]
   },
@@ -198,12 +260,9 @@
    "source": [
     "prompt = \"Describe and summarise the video\"\n",
     "\n",
-    "# Set the model to Gemini 1.5 Flash.\n",
-    "model = genai.GenerativeModel(model_name=\"models/gemini-1.5-flash\")\n",
-    "\n",
     "# Make the LLM request.\n",
     "print(\"Making LLM inference request...\")\n",
-    "response = model.generate_content([prompt, video_file],\n",
+    "response = model_flash.generate_content([prompt, video_file],\n",
     "                                  request_options={\"timeout\": 600})\n",
     "\n",
     "print(response.text)\n",
